Pics changed for better lighthouse score

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,7 +50,7 @@ html {
 }
 
 #hero-image {
-    background-image: url("../images/liberty.jpg");
+    background-image: url("../images/liberty-new.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
