--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -194,6 +194,7 @@ h6 {
     display: flex;
     flex-direction: column;
     line-height: 20px;  
+    margin-bottom: 20px;   
 }
 
 .discounted-tips-box {
@@ -204,7 +205,7 @@ h6 {
     color: #ffffff;
     display: flex;
     flex-direction: column;
-    line-height: 20px;  
+    line-height: 20px; 
 }
 
 .activity-header h5,
@@ -256,10 +257,15 @@ h6 {
     text-align: center;
 }
 
+.thrifty-email {
+    padding-top: 15px;
+}
+
 .social-links li {
+    align-items: center;
     display: inline-block;
-    letter-spacing: 50px;
-    padding-left: 20px;
+    justify-content: center;
+    margin-bottom: 0;
 }
 
 /* ---------------------------------------------------------------------Media Queries */
