--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -265,6 +265,7 @@ h6 {
     align-items: center;
     display: inline-block;
     justify-content: center;
+    letter-spacing: 70px;
     margin-bottom: 0;
 }
 
@@ -277,7 +278,7 @@ h6 {
 
 .social-links li {
     display: inline-block;
-    letter-spacing: 90px;
+    /* letter-spacing: 90px; */
 }
 }
 
@@ -294,6 +295,11 @@ h6 {
 h2 {
     padding-bottom: 30px;
     padding-top: 30px;
+}
+
+.free-tips-box {
+    margin-left: 59px;
+    margin-right: 20px;
 }
 
 .discounted-tips-box {
