Missing bracket added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -344,6 +344,7 @@ h5 {
     font-size: 1.5rem;
     margin-left: 275px;
 }
+}
 
 /* X-Large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
