--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -195,13 +195,15 @@ h5 {
     display: flex;
     flex-direction: column;
     line-height: 20px;  
-    margin-bottom: 20px;  
+    margin-bottom: 20px;
+    text-align: center;  
 }
 
 .activity-header h5,
 .activity-header a.btn {
     display: inline-block;
     vertical-align: middle;
+    text-align: center;
 }
 
 .activity-header h5 {
