--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -241,22 +241,22 @@ h5 {
 /* -------------------------------------------------------------------- Footer Container */
 .footer-container {
     background-color: #002561;
-    display: flex;
     flex-direction: row;
     min-height: 60px;
+    text-align: center;
 }
 
+
 .thrifty-email {
+    justify-content: center;
     padding-top: 15px;
+    text-align: center;
 }
 
 .social-links li {
-    /* align-items: center; */
     display: inline-block;
-    /* justify-content: center; */
-    letter-spacing: 70px;
-    margin-bottom: 0;
-    padding-left: 45px;
+    justify-content: center;
+    text-align: center;
 }
 
 /* ---------------------------------------------------------------------Media Queries */
@@ -268,12 +268,6 @@ h5 {
 
 .free-tips-icons {
     border-bottom: 20px;
-}
-
-.social-links li {
-    display: inline-block;
-    /* letter-spacing: 90px; */
-}
 }
 
 /* Medium devices (tablets, 768px and up) */
@@ -350,7 +344,6 @@ h5 {
 
 .thrifty-email {
     font-size: 1.5rem;
-    margin-left: 275px;
 }
 }
 
@@ -383,13 +376,10 @@ h5 {
 
 .social-links li {
     font-size: 1.5rem;
-    padding-left: 70px;
-    
 }
 
 .thrifty-email {
     font-size: 1.5rem;
-    margin-left: 450px;
 }
 }
 
@@ -414,11 +404,9 @@ h5 {
 
 .thrifty-email {
     font-size: 2rem;
-    margin-left: 550px;
 }
 
 .social-links li {
     font-size: 2rem;
-    padding-left: 90px;
 }
 }
