--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -256,6 +256,7 @@ h5 {
 .social-links li {
     display: inline-block;
     justify-content: center;
+    margin-right: 20px;
     text-align: center;
 }
 
