--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,7 +143,7 @@ h5 {
   }
 
 #hero-text-overlay {
-    width: 55%;
+    width: 65%;
     height: 75%;
     background-color: rgba(255, 255, 255, 0.15);
     position: absolute;
@@ -179,7 +179,7 @@ h5 {
     justify-content: center;
     padding-bottom: 20px;    
 }
-.icon-captions {
+#icon-captions {
     align-items: center;
     justify-content: center;
     padding-top: 45px;
