--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,7 @@ h5 {
 /* --------------------------------------------------------------- Navbar */
 .navbar {
     background-color: #002561;
-    padding-top: 56px;
+    padding-top: 0px;
 }
 
 .navbar-brand {
@@ -145,7 +145,7 @@ h5 {
     height: 75%;
     background-color: rgba(255, 255, 255, 0.15);
     position: absolute;
-    top: 55%;
+    top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
@@ -295,6 +295,11 @@ h5 {
     font-size: 4.5rem;
 }
 
+#hero-text-overlay {
+    top: 55%;
+}
+
+
 h2 {
     padding-bottom: 30px;
     padding-top: 30px;
@@ -316,6 +321,11 @@ h2 {
 #hero-text h1 {
     font-size: 5rem;
 }
+
+#hero-text-overlay {
+    top: 55%;
+}
+
 
 h2 {
     padding-bottom: 50px;
@@ -344,6 +354,11 @@ h5 {
     font-size: 5.5rem;
 }
 
+#hero-text-overlay {
+    top: 55%;
+}
+
+
 h5 {
     font-size: 1.5rem;
 }
@@ -358,6 +373,10 @@ h5 {
 #hero-text h1 {
     font-size: 6.5rem;
     padding-top: 0;
+}
+
+#hero-text-overlay {
+    top: 50%;
 }
 
 .icon-container {
