--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -271,6 +271,7 @@ h5 {
 .free-tips-icons {
     border-bottom: 20px;
 }
+}
 
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
