Add more unsolved bugs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,7 +129,7 @@ h5 {
 }
   
 /* ------------------------------------------------------------------ Intro Container */
-.aerial-view-new {
+.aerial-view2 {
     background: url("../images/aerial-view2.jpg");
     background-position: center center;
     background-repeat: no-repeat;
